2004-10-15  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added various scanners.
	* po/sane-backends.da.po: Updated Danish translation (from Mogens
	  Jaeger <mogensjaeger@get2net.dk>). 
	
2004-10-14  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* include/sane/sanei_wire.h sanei/sanei_wire.c: Limit the total
	  amount of memory used for arrays and pointers while decoding the
	  wire to 1 MB (bug #300158). Run "make clean" before "make"!

2004-10-14  Ullrich Sigwanz <usigwanz@freesurf.ch>

        * backend/niash.c: removing a non-ANSI conform comma.
        adapting the gammma conversion.

2004-10-14  Gerhard Jaeger <gerhard@gjaeger.de>

	* sanei/sanei_thread.c: Added missing pthread_detach() so the
	  thread resources could be reused again.

2004-10-13  Ullrich Sigwanz <usigwanz@freesurf.ch>

        * backend/niash.c: Proper resource handling in sane_cancel.

2004-10-12  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Fixed warning condition.
	* backend/plustek-usbhw.c: Cleanup.

2004-10-12 Giuseppe Sacco <eppesuig@debian.org>

	* Updated italian translation.
	* Added a "translators" section in AUTHORS

2004-10-11  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* acinclude.m4 config.guess config.sub configure ltmain.sh: Update
	  to libtool 1.5.10.
	* doc/descriptions/unsupported.desc: Added link to
	  Microtek Filmscan 35. 
	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_high.c
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES:
	  Fixed typos. Added Packard Bell Diamond 2450 to .conf and
	  changed status to "good". Avoid error message when closing
	  scanner. Don't print max_white warning when debugging is not
	  enabled.
	* po/sane-backends.bg.po po/sane-backends.cs.po po/sane-backends.da.po
	  po/sane-backends.de.po po/sane-backends.es.po po/sane-backends.fi.po
	  po/sane-backends.fr.po po/sane-backends.it.po po/sane-backends.nl.po